[gd_scene load_steps=3 format=3 uid="uid://dvoxb11puhlle"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_fip5k"]
[ext_resource type="AudioStream" uid="uid://c7ejj60b6csx2" path="res://assets/sounds/Kirby falling meme (mp3cut.net).mp3" id="2_376nr"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_fip5k")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.191
one_shot = true

[node name="SFX_Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_376nr")
volume_db = -14.991

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
